--- a/app-marell-server/src/main/resources/application.properties
+++ b/app-marell-server/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.main.allow-bean-definition-overriding=true
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.main.allow-circular-references=true
 
 ## App Properties
 app.jwtSecretRefreshToken=JWTSuperSecretKeyRefreshToken
