--- a/app-marell-admin/package.json
+++ b/app-marell-admin/package.json
@@ -16,6 +16,8 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
+    "availity-reactstrap-validation": "^2.7.1",
+    "reactstrap": "^8.10.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.2"
